--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -42,14 +42,26 @@ jobs:
 #        run: hack/verify-codegen.sh
 #      - name: verify crdgen
 #        run: hack/verify-crdgen.sh
+  init:
+    name: init env
+    runs-on: ubuntu-18.04
+    steps:
+      - name: checkout code
+          uses: actions/checkout@v2
+      - name: install Go
+        uses: actions/setup-go@v2
+        with:
+          go-version: 1.17.x
   fmt:
     name: gofmt
+    needs: init
     runs-on: ubuntu-18.04
     steps:
       - name: go fmt check
         run: make fmt-check
   vet:
     name: go vet
+    needs: init
     runs-on: ubuntu-18.04
     steps:
       - name: go vet
@@ -61,11 +73,5 @@ jobs:
       - vet
     runs-on: ubuntu-18.04
     steps:
-      - name: checkout code
-        uses: actions/checkout@v2
-      - name: install Go
-        uses: actions/setup-go@v2
-        with:
-          go-version: 1.16.x
       - name: make test
         run: make test
