--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -42,8 +42,8 @@ jobs:
 #        run: hack/verify-codegen.sh
 #      - name: verify crdgen
 #        run: hack/verify-crdgen.sh
-  init:
-    name: init env
+  fmt:
+    name: gofmt
     runs-on: ubuntu-18.04
     steps:
       - name: checkout code
@@ -52,18 +52,18 @@ jobs:
         uses: actions/setup-go@v2
         with:
           go-version: 1.17.x
-  fmt:
-    name: gofmt
-    needs: init
-    runs-on: ubuntu-18.04
-    steps:
       - name: go fmt check
         run: make fmt-check
   vet:
     name: go vet
-    needs: init
     runs-on: ubuntu-18.04
     steps:
+      - name: checkout code
+        uses: actions/checkout@v2
+      - name: install Go
+        uses: actions/setup-go@v2
+        with:
+          go-version: 1.17.x
       - name: go vet
         run: make vet
   test:
@@ -73,5 +73,11 @@ jobs:
       - vet
     runs-on: ubuntu-18.04
     steps:
+      - name: checkout code
+        uses: actions/checkout@v2
+      - name: install Go
+        uses: actions/setup-go@v2
+        with:
+          go-version: 1.17.x
       - name: make test
         run: make test
