--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -82,3 +82,11 @@ jobs:
           go-version: 1.17.x
       - name: make test
         run: make test
+      - name: Upload coverage to Codecov
+        uses: codecov/codecov-action@v2
+        with:
+          fail_ci_if_error: true
+          files: ./coverage.out
+          flags: unittests
+          name: codecov
+          verbose: true
