--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -80,13 +80,9 @@ jobs:
         uses: actions/setup-go@v2
         with:
           go-version: 1.17.x
-      - name: make test
-        run: make test
+#      - name: make test
+#        run: make test
+      - name: Run coverage
+        run: go test -race -coverprofile=coverage.out -covermode=atomic
       - name: Upload coverage to Codecov
-        uses: codecov/codecov-action@v2
-        with:
-          fail_ci_if_error: true
-          files: ./coverage.out
-          flags: unittests
-          name: codecov
-          verbose: true
+        run: bash <(curl -s https://codecov.io/bash)
